// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/layout/demo/basic.md correctly 1`] = `
<div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-header"
    >
      Header
    </div>
    <div
      class="c7n-layout-content"
    >
      Content
    </div>
    <div
      class="c7n-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-header"
    >
      Header
    </div>
    <div
      class="c7n-layout"
    >
      <div
        class="c7n-layout-sider"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="c7n-layout-sider-children"
        >
          Sider
        </div>
      </div>
      <div
        class="c7n-layout-content"
      >
        Content
      </div>
    </div>
    <div
      class="c7n-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-header"
    >
      Header
    </div>
    <div
      class="c7n-layout"
    >
      <div
        class="c7n-layout-content"
      >
        Content
      </div>
      <div
        class="c7n-layout-sider"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="c7n-layout-sider-children"
        >
          Sider
        </div>
      </div>
    </div>
    <div
      class="c7n-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-sider"
      style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="c7n-layout-sider-children"
      >
        Sider
      </div>
    </div>
    <div
      class="c7n-layout"
    >
      <div
        class="c7n-layout-header"
      >
        Header
      </div>
      <div
        class="c7n-layout-content"
      >
        Content
      </div>
      <div
        class="c7n-layout-footer"
      >
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/custom-trigger.md correctly 1`] = `
<div
  class="c7n-layout"
>
  <div
    class="c7n-layout-sider"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="c7n-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-inline"
        role="menu"
      >
        <li
          aria-selected="true"
          class="c7n-menu-item c7n-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-user"
          />
          <span>
            nav 1
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-video-camera"
          />
          <span>
            nav 2
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-upload"
          />
          <span>
            nav 3
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-header"
      style="background:#fff;padding:0"
    >
      <i
        class="icon icon-menu-fold trigger"
      />
    </div>
    <div
      class="c7n-layout-content"
      style="margin:24px 16px;padding:24px;background:#fff;min-height:280px"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/fixed.md correctly 1`] = `
<div
  class="c7n-layout"
>
  <div
    class="c7n-layout-header"
    style="position:fixed;width:100%"
  >
    <div
      class="logo"
    />
    <ul
      class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 1
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="true"
        class="c7n-menu-item c7n-menu-item-selected"
        role="menuitem"
      >
        nav 2
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 3
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c7n-layout-content"
    style="padding:0 50px;margin-top:64px"
  >
    <div
      class="c7n-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          List
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          App
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:380px"
    >
      Content
    </div>
  </div>
  <div
    class="c7n-layout-footer"
    style="text-align:center"
  >
    Choerodon UI
  </div>
</div>
`;

exports[`renders ./components/layout/demo/fixed-sider.md correctly 1`] = `
<div
  class="c7n-layout"
>
  <div
    class="c7n-layout-sider"
    style="overflow:auto;height:100vh;position:fixed;left:0;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="c7n-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-inline"
        role="menu"
      >
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-user"
          />
          <span
            class="nav-text"
          >
            nav 1
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-video-camera"
          />
          <span
            class="nav-text"
          >
            nav 2
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-upload"
          />
          <span
            class="nav-text"
          >
            nav 3
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="true"
          class="c7n-menu-item c7n-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-bar-chart"
          />
          <span
            class="nav-text"
          >
            nav 4
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-cloud-o"
          />
          <span
            class="nav-text"
          >
            nav 5
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-appstore-o"
          />
          <span
            class="nav-text"
          >
            nav 6
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-team"
          />
          <span
            class="nav-text"
          >
            nav 7
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-shop"
          />
          <span
            class="nav-text"
          >
            nav 8
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c7n-layout"
    style="margin-left:200px"
  >
    <div
      class="c7n-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="c7n-layout-content"
      style="margin:24px 16px 0;overflow:initial"
    >
      <div
        style="padding:24px;background:#fff;text-align:center"
      >
        ...
        <br />
        Really
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        long
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        content
      </div>
    </div>
    <div
      class="c7n-layout-footer"
      style="text-align:center"
    >
      Choerodon UI
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/responsive.md correctly 1`] = `
<div
  class="c7n-layout"
>
  <div
    class="c7n-layout-sider"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="c7n-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-inline"
        role="menu"
      >
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-user"
          />
          <span
            class="nav-text"
          >
            nav 1
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-video-camera"
          />
          <span
            class="nav-text"
          >
            nav 2
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-upload"
          />
          <span
            class="nav-text"
          >
            nav 3
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="true"
          class="c7n-menu-item c7n-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-user"
          />
          <span
            class="nav-text"
          >
            nav 4
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="c7n-layout-content"
      style="margin:24px 16px 0"
    >
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        content
      </div>
    </div>
    <div
      class="c7n-layout-footer"
      style="text-align:center"
    >
      Choerodon UI
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/side.md correctly 1`] = `
<div
  class="c7n-layout"
  style="min-height:100vh"
>
  <div
    class="c7n-layout-sider c7n-layout-sider-has-trigger"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="c7n-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-inline"
        role="menu"
      >
        <li
          aria-selected="true"
          class="c7n-menu-item c7n-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-pie-chart"
          />
          <span>
            Option 1
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-desktop"
          />
          <span>
            Option 2
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
        <li
          class="c7n-menu-submenu c7n-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="c7n-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                class="icon icon-user"
              />
              <span>
                User
              </span>
            </span>
            <i
              class="c7n-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="c7n-menu-submenu c7n-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="c7n-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                class="icon icon-team"
              />
              <span>
                Team
              </span>
            </span>
            <i
              class="c7n-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          aria-selected="false"
          class="c7n-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="icon icon-file"
          />
          <span>
            File
          </span>
          <div
            class="c7n-ripple-wrapper"
          />
        </li>
      </ul>
    </div>
    <div
      class="c7n-layout-sider-trigger"
      style="width:200px"
    >
      <i
        class="icon icon-left"
      />
    </div>
  </div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="c7n-layout-content"
      style="margin:0 16px"
    >
      <div
        class="c7n-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="c7n-breadcrumb-link"
          >
            User
          </span>
          <span
            class="c7n-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="c7n-breadcrumb-link"
          >
            Bill
          </span>
          <span
            class="c7n-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        Bill is a cat.
      </div>
    </div>
    <div
      class="c7n-layout-footer"
      style="text-align:center"
    >
      Choerodon UI
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top.md correctly 1`] = `
<div
  class="layout c7n-layout"
>
  <div
    class="c7n-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 1
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="true"
        class="c7n-menu-item c7n-menu-item-selected"
        role="menuitem"
      >
        nav 2
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 3
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c7n-layout-content"
    style="padding:0 50px"
  >
    <div
      class="c7n-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          List
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          App
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:280px"
    >
      Content
    </div>
  </div>
  <div
    class="c7n-layout-footer"
    style="text-align:center"
  >
    Choerodon UI
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top-side.md correctly 1`] = `
<div
  class="c7n-layout"
>
  <div
    class="header c7n-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 1
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="true"
        class="c7n-menu-item c7n-menu-item-selected"
        role="menuitem"
      >
        nav 2
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 3
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c7n-layout-content"
    style="padding:0 50px"
  >
    <div
      class="c7n-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          List
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="c7n-breadcrumb-link"
        >
          App
        </span>
        <span
          class="c7n-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      class="c7n-layout"
      style="padding:24px 0;background:#fff"
    >
      <div
        class="c7n-layout-sider"
        style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="c7n-layout-sider-children"
        >
          <ul
            class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-inline"
            role="menu"
            style="height:100%"
          >
            <li
              class="c7n-menu-submenu c7n-menu-submenu-inline c7n-menu-submenu-open c7n-menu-submenu-selected"
              role="menuitem"
            >
              <div
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="sub1$Menu"
                class="c7n-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="icon icon-user"
                  />
                  subnav 1
                </span>
                <i
                  class="c7n-menu-submenu-arrow"
                />
              </div>
              <ul
                class="c7n-menu  c7n-menu-sub c7n-menu-inline"
                id="sub1$Menu"
                role="menu"
              >
                <li
                  aria-selected="true"
                  class="c7n-menu-item c7n-menu-item-selected"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option1
                  <div
                    class="c7n-ripple-wrapper"
                  />
                </li>
                <li
                  aria-selected="false"
                  class="c7n-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option2
                  <div
                    class="c7n-ripple-wrapper"
                  />
                </li>
                <li
                  aria-selected="false"
                  class="c7n-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option3
                  <div
                    class="c7n-ripple-wrapper"
                  />
                </li>
                <li
                  aria-selected="false"
                  class="c7n-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option4
                  <div
                    class="c7n-ripple-wrapper"
                  />
                </li>
              </ul>
            </li>
            <li
              class="c7n-menu-submenu c7n-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="c7n-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="icon icon-laptop"
                  />
                  subnav 2
                </span>
                <i
                  class="c7n-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
            <li
              class="c7n-menu-submenu c7n-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="c7n-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="icon icon-notification"
                  />
                  subnav 3
                </span>
                <i
                  class="c7n-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
          </ul>
        </div>
      </div>
      <div
        class="c7n-layout-content"
        style="padding:0 24px;min-height:280px"
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="c7n-layout-footer"
    style="text-align:center"
  >
    Choerodon UI
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top-side-2.md correctly 1`] = `
<div
  class="c7n-layout"
>
  <div
    class="header c7n-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="c7n-menu c7n-menu-dark c7n-menu-root c7n-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 1
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="true"
        class="c7n-menu-item c7n-menu-item-selected"
        role="menuitem"
      >
        nav 2
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-selected="false"
        class="c7n-menu-item"
        role="menuitem"
      >
        nav 3
        <div
          class="c7n-ripple-wrapper"
        />
      </li>
      <li
        class="c7n-menu-submenu c7n-menu-submenu-horizontal c7n-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden;position:absolute"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="c7n-menu-submenu-title"
          title=""
        >
          <i
            class="c7n-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="c7n-layout"
  >
    <div
      class="c7n-layout-sider"
      style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="c7n-layout-sider-children"
      >
        <ul
          class="c7n-menu c7n-menu-light c7n-menu-root c7n-menu-inline"
          role="menu"
          style="height:100%;border-right:0"
        >
          <li
            class="c7n-menu-submenu c7n-menu-submenu-inline c7n-menu-submenu-open c7n-menu-submenu-selected"
            role="menuitem"
          >
            <div
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="sub1$Menu"
              class="c7n-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="icon icon-user"
                />
                subnav 1
              </span>
              <i
                class="c7n-menu-submenu-arrow"
              />
            </div>
            <ul
              class="c7n-menu  c7n-menu-sub c7n-menu-inline"
              id="sub1$Menu"
              role="menu"
            >
              <li
                aria-selected="true"
                class="c7n-menu-item c7n-menu-item-selected"
                role="menuitem"
                style="padding-left:48px"
              >
                option1
                <div
                  class="c7n-ripple-wrapper"
                />
              </li>
              <li
                aria-selected="false"
                class="c7n-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option2
                <div
                  class="c7n-ripple-wrapper"
                />
              </li>
              <li
                aria-selected="false"
                class="c7n-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option3
                <div
                  class="c7n-ripple-wrapper"
                />
              </li>
              <li
                aria-selected="false"
                class="c7n-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option4
                <div
                  class="c7n-ripple-wrapper"
                />
              </li>
            </ul>
          </li>
          <li
            class="c7n-menu-submenu c7n-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="c7n-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="icon icon-laptop"
                />
                subnav 2
              </span>
              <i
                class="c7n-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            class="c7n-menu-submenu c7n-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="c7n-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="icon icon-notification"
                />
                subnav 3
              </span>
              <i
                class="c7n-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
        </ul>
      </div>
    </div>
    <div
      class="c7n-layout"
      style="padding:0 24px 24px"
    >
      <div
        class="c7n-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="c7n-breadcrumb-link"
          >
            Home
          </span>
          <span
            class="c7n-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="c7n-breadcrumb-link"
          >
            List
          </span>
          <span
            class="c7n-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="c7n-breadcrumb-link"
          >
            App
          </span>
          <span
            class="c7n-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        class="c7n-layout-content"
        style="background:#fff;padding:24px;margin:0;min-height:280px"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
